syntax = "proto3";

package api.auth.v1;
import "validate/validate.proto";

option go_package = "scrm/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "api.auth.v1";

service Auth {
	rpc GetToken (LoginRequest) returns (LoginReply);
}

//登录信息
message LoginRequest {
	string username = 1 [(validate.rules).string.min_len =  10];
	string password = 2 [(validate.rules).string.min_len =  10];
}

message LoginReply {
	string token = 1;
}